--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ padding:3%;
     margin:5%;
     border-radius:15px;
    box-shadow: 5px 10px 20px black;
+ 
    transition: .2s;
   
 }
@@ -72,13 +73,13 @@ padding:3%;
 }
 .exp-name{
     font-size: 30px;
-};
+}
 .red-borderr {
     border-left: 5px solid;
-    border-image: linear-gradient(blue,cyan);
+    border-image: linear-gradient(#002aff,cyan);
     border-image-slice: 1;
     border-radius: 15px;
-}
+} 
 
 
 .blue-border{
@@ -87,4 +88,7 @@ padding:3%;
     border-image-slice: 1;
     border-radius: 15px;
 }
-
+.footerClaass{
+    text-align:center;
+    padding:20px;
+}
